Fix scrollbar track

--- a/vscode/webviews/themes/jetbrains.css
+++ b/vscode/webviews/themes/jetbrains.css
@@ -392,9 +392,10 @@ html[data-ide='JetBrains'] {
     --vscode-remoteHub-decorations-submoduleForegroundColor: var(--jetbrains-ActionButton-hoverBackground);
     --vscode-remoteHub-decorations-workspaceRepositoriesView-hasUncommittedChangesForegroundColor: var(--jetbrains-ActionButton-pressedBackground);
     --vscode-scm-historyItemStatisticsBorder: var(--jetbrains-VersionControl-Log-Commit-currentBranchBackground);
-    --vscode-scrollbarSlider-activeBackground: var(--jetbrains-Scrollbar-thumbDarkShadow);
-    --vscode-scrollbarSlider-background: var(--jetbrains-Scrollbar-thumb);
-    --vscode-scrollbarSlider-hoverBackground: var(--jetbrains-Scrollbar-thumbShadow);
+    --vscode-scrollbar-shadow: var(--jetbrains-ScrollBar-thumbShadow);
+    --vscode-scrollbarSlider-activeBackground: var(--jetbrains-ScrollBar-trackHighlight);
+    --vscode-scrollbarSlider-background: var(--jetbrains-ScrollBar-track);
+    --vscode-scrollbarSlider-hoverBackground: var(--jetbrains-ScrollBar-trackHighlight);
     --vscode-search-resultsInfoForeground: var(--jetbrains-InfoText);
     --vscode-searchEditor-findMatchBorder: var(--jetbrains-SearchEverywhere-list-separatorColor);
     --vscode-searchEditor-textInputBorder: var(--jetbrains-SearchEverywhere-searchField-infoForeground);
@@ -642,33 +643,4 @@ html[data-ide='JetBrains'] kbd {
     box-shadow: inset 0 -1px 0 var(--vscode-widget-shadow);
     vertical-align: middle;
     padding: 1px 3px;
-}
-
-:matches(html[data-ide='JetBrains'], html[data-ide='JetBrains'] *)::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-}
-
-:matches(html[data-ide='JetBrains'], html[data-ide='JetBrains'] *)::-webkit-scrollbar-corner {
-    background-color: var(--vscode-editor-background);
-}
-
-:matches(html[data-ide='JetBrains'], html[data-ide='JetBrains'] *)::-webkit-scrollbar-thumb {
-    background-color: var(--vscode-scrollbarSlider-background);
-}
-
-:matches(html[data-ide='JetBrains'], html[data-ide='JetBrains'] *)::-webkit-scrollbar-thumb:hover {
-    background-color: var(--vscode-scrollbarSlider-hoverBackground);
-}
-
-:matches(html[data-ide='JetBrains'], html[data-ide='JetBrains'] *)::-webkit-scrollbar-thumb:active {
-    background-color: var(--vscode-scrollbarSlider-activeBackground);
-}
-
-:matches(html[data-ide='JetBrains'], html[data-ide='JetBrains'] *)::highlight(find-highlight) {
-    background-color: var(--vscode-editor-findMatchHighlightBackground);
-}
-
-:matches(html[data-ide='JetBrains'], html[data-ide='JetBrains'] *)::highlight(current-find-highlight) {
-    background-color: var(--vscode-editor-findMatchBackground);
 }
